--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-redux": "^8.0.5",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.11.0",
-    "react-toastify": "^9.1.2"
+    "react-toastify": "^9.1.2",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
