--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ws": "^8.18.1"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
     "concurrently": "^8.2.2",
     "nodemon": "^2.0.22"
   }
