--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
+    "lucide-react": "^0.487.0",
     "mongodb": "^6.15.0",
     "mongoose": "^7.1.0",
     "socket.io": "^4.8.1",
