--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.8.4",
     "bootstrap": "^5.2.3",
     "lucide-react": "^0.487.0",
     "react": "^18.2.0",
